<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/add_common_root_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/add_common_guide_margin"
        android:text="@string/add_manual_guide_url"
        android:textSize="@dimen/add_common_guide_text_size" />

    <EditText
        android:id="@+id/add_manual_edit_text_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/add_common_guide_margin"
        android:inputType="textUri"
        android:text="@string/add_common_default_text_url" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/add_common_guide_margin"
        android:text="@string/add_manual_guide_name"
        android:textSize="@dimen/add_common_guide_text_size" />

    <EditText
        android:id="@+id/add_manual_edit_text_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_manual_button_positive"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/add_common_button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_common_button_margin"
            android:layout_weight="1"
            android:text="@string/add_common_button_positive" />

        <Button
            android:id="@+id/add_manual_button_negative"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="@dimen/add_common_button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/add_common_button_margin"
            android:layout_weight="1"
            android:text="@string/add_common_button_negative" />

    </LinearLayout>

</LinearLayout>